@@ -1,3 +1,8 @@
+2019-03-18  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/Rcpp/macros/macros.h (END_RCPP_RETURN_ERROR): Add
+	UNPROTECT to reference nprot, also check for stop_sym
+
 2019-03-17  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION: Release 1.0.1
